--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,20 @@ services:
     volumes:
       - ./src:/var/www/html
     ports:
-      - "80:80"
+      - "8089:80"
     depends_on:
       - db
   db:
-    build:
-      context: ./docker/mysql
-      dockerfile: Dockerfile
+    image: mysql:8.0
     platform: 
       linux/x86_64 
     volumes:
       - ./docker/mysql/data:/var/lib/mysql
     ports:
-      - "3306:3306"
+      - "3380:3306"
     environment:
-      - MYSQL_ROOT_PASSSWORD=pass
+      - MYSQL_DATABASE=db
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=pass
+      - MYSQL_ROOT_PASSWORD=rootpass
       
